--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -65,6 +65,9 @@
             <feature>webconsole</feature>
             <feature>shell-compat</feature>
 
+            <!-- Jasypt Encryption service used to encrypt passwords -->
+            <feature>jasypt-encryption</feature>
+
             <feature>cxf</feature>
             <feature>scr</feature>
             <feature>http</feature>
@@ -89,6 +92,7 @@
             <feature>patlego-vm-graphql</feature>
             <feature>patlego-vm-client</feature>
             <feature>patlego-vm-ocr</feature>
+            <feature>patlego-vm-email</feature>
           </bootFeatures>
           <workDirectory>${project.build.directory}/assembly/patlego.vm</workDirectory>
           <pathPrefix>patlego.vm</pathPrefix>
