--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -5,7 +5,9 @@
   <artifactId>karaf-system</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <name>Karaf System</name>
+
   <modules>
     <module>system.sql</module>
     <module>system.dao</module>
@@ -17,6 +19,7 @@
     <module>system.core</module>
     <module>system.encryption</module>
   </modules>
+
   <properties>
     <postgres.db>karaf_db</postgres.db> <!-- PSQL DEV VALUES -->
     <postgres.dev.url>jdbc:postgresql://postgres-db:5432</postgres.dev.url>
@@ -34,6 +37,7 @@
     <website.version>1.0-SNAPSHOT</website.version>
     <jasypt.version>1.9.3</jasypt.version>
   </properties>
+
   <repositories>
     <repository>
       <id>central</id>
@@ -51,6 +55,7 @@
       <url>https://maven.pkg.github.com/pat-lego/io.github.vm.patlego.website</url>
     </repository>
   </repositories>
+
   <distributionManagement>
     <repository>
       <id>patlego-core</id>
@@ -58,6 +63,7 @@
       <url>https://maven.pkg.github.com/pat-lego/io.github.vm.patlego</url>
     </repository>
   </distributionManagement>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -85,7 +91,8 @@
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
           <version>4.3.0</version>
-          <dependencies> <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+          <dependencies>
+            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
             <dependency>
               <groupId>javax.xml.bind</groupId>
               <artifactId>jaxb-api</artifactId>
@@ -424,6 +431,11 @@
         <groupId>org.jasypt</groupId>
         <artifactId>jasypt</artifactId>
         <version>${jasypt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.karaf.shell</groupId>
+        <artifactId>org.apache.karaf.shell.console</artifactId>
+        <version>${karaf.runtime.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
