Adding missing parameter

--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -434,7 +434,7 @@
       </dependency>
       <dependency>
         <groupId>org.apache.karaf.shell</groupId>
-        <artifactId>org.apache.karaf.shell.console</artifactId>
+        <artifactId>org.apache.karaf.shell.core</artifactId>
         <version>${karaf.runtime.version}</version>
       </dependency>
     </dependencies>
