--- a/karaf-system/system.email/pom.xml
+++ b/karaf-system/system.email/pom.xml
@@ -98,5 +98,13 @@
       <artifactId>system.encryption</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
   </dependencies>
 </project>
