--- a/karaf-system/system.core/src/main/environments/dev/features/io.github.vm.patlego.email.SmtpServer.default.cfg
+++ b/karaf-system/system.core/src/main/environments/dev/features/io.github.vm.patlego.email.SmtpServer.default.cfg
@@ -1,3 +1,3 @@
-email.host=email-smtp.us-west-2.amazonaws.com
-email.port=25
+email.host=email-smtp.ca-central-1.amazonaws.com
+email.port=587
 email.protocol=TLS
