--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -15,9 +15,10 @@
     <module>system.graphql</module>
     <module>system.email</module>
     <module>system.ocr</module>
+    <module>system.encryption</module>
+    <module>system.settings</module>
     <module>system.features</module>
     <module>system.core</module>
-    <module>system.encryption</module>
   </modules>
 
   <properties>
