--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -32,7 +32,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <karaf.runtime.version>4.3.0.RC1</karaf.runtime.version>
+    <karaf.runtime.version>4.3.0</karaf.runtime.version>
     <jackson.version>2.11.3</jackson.version>
     <cxf.version>3.3.3</cxf.version>
     <website.version>1.0-SNAPSHOT</website.version>
@@ -264,19 +264,21 @@
         <version>${karaf.runtime.version}</version>
         <classifier>features</classifier>
         <type>xml</type>
-      </dependency> <!--https://mvnrepository.com/artifact/org.apache.cxf.karaf/apache-cxf-->
+      </dependency> 
+      <!-- https://mvnrepository.com/artifact/org.apache.cxf.karaf/apache-cxf -->
       <dependency>
         <groupId>org.apache.cxf.karaf</groupId>
         <artifactId>apache-cxf</artifactId>
         <type>xml</type>
         <classifier>features</classifier>
         <scope>runtime</scope>
-        <version>3.3.3</version>
-      </dependency> <!--https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-frontend-jaxrs-->
+        <version>3.4.2</version>
+      </dependency>
+      <!--https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-frontend-jaxrs-->
       <dependency>
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-        <version>3.3.3</version>
+        <version>3.4.2</version>
         <scope>provided</scope>
       </dependency> <!--https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine-->
       <dependency>
@@ -375,7 +377,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.9</version>
+        <version>3.11</version>
         <scope>provided</scope>
       </dependency> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
       <dependency>
