--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -63,10 +63,13 @@
             <feature>webconsole</feature>
             <feature>shell-compat</feature>
 
-            <feature>cxf</feature>
+            <!-- This is to be deleted when we migrate to 4.3.1 -->
+            <feature>jetty</feature>
+            
             <feature>scr</feature>
             <feature>http</feature>
             <feature>http-whiteboard</feature>
+            <feature>cxf</feature>
 
             <feature>war</feature>
 
@@ -252,7 +255,7 @@
       <type>xml</type>
       <classifier>features</classifier>
       <scope>runtime</scope>
-      <version>3.3.3</version>
+      <version>3.4.2</version>
     </dependency>
     <dependency>
       <groupId>io.github.vm.patlego</groupId>
