--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -65,7 +65,7 @@
 
             <!-- This is to be deleted when we migrate to 4.3.1 -->
             <feature>jetty</feature>
-            
+
             <feature>scr</feature>
             <feature>http</feature>
             <feature>http-whiteboard</feature>
@@ -83,7 +83,7 @@
             <feature dependency="true">aries-blueprint</feature>
             <feature version="[2,3)">jpa</feature>
             <feature version="[5,6)">hibernate</feature>
-            
+
             <feature>patlego-vm</feature>
 
           </bootFeatures>
@@ -260,6 +260,13 @@
     <dependency>
       <groupId>io.github.vm.patlego</groupId>
       <artifactId>system.features</artifactId>
+      <type>xml</type>
+      <scope>runtime</scope>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.vm.patlego.html</groupId>
+      <artifactId>html.features</artifactId>
       <type>xml</type>
       <scope>runtime</scope>
       <version>${project.version}</version>
