--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>karaf-system</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  
+
   <name>Karaf System</name>
 
   <modules>
@@ -31,10 +31,11 @@
     <postgres.ecs.username>karaf</postgres.ecs.username>
     <postgres.ecs.password />
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-     <karaf.runtime.version>4.3.0</karaf.runtime.version>
+    <karaf.runtime.version>4.3.0</karaf.runtime.version>
     <jackson.version>2.11.3</jackson.version>
     <cxf.version>3.3.3</cxf.version>
     <website.version>1.0-SNAPSHOT</website.version>
+    <html.version>1.0-SNAPSHOT</html.version>
     <jasypt.version>1.9.3</jasypt.version>
     <javax.mail.version>1.4.7</javax.mail.version>
     <aws.sdk.version>2.15.69</aws.sdk.version>
@@ -112,7 +113,8 @@
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
           <version>4.3.0</version>
-          <dependencies> <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+          <dependencies>
+            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
             <dependency>
               <groupId>javax.xml.bind</groupId>
               <artifactId>jaxb-api</artifactId>
@@ -388,7 +390,7 @@
         <artifactId>commons-io</artifactId>
         <version>2.7</version>
       </dependency>
-       <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
