--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -39,7 +39,7 @@
     <jasypt.version>1.9.3</jasypt.version>
     <javax.mail.version>1.4.7</javax.mail.version>
     <aws.sdk.version>2.15.69</aws.sdk.version>
-    <mustache.compiler.version>0.9.7</mustache.compiler.version>
+    <handlebars.compiler.version>4.2.0</handlebars.compiler.version>
   </properties>
 
   <repositories>
