--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -5,9 +5,7 @@
   <artifactId>karaf-system</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-
   <name>Karaf System</name>
-
   <modules>
     <module>system.sql</module>
     <module>system.dao</module>
@@ -19,7 +17,6 @@
     <module>system.features</module>
     <module>system.core</module>
   </modules>
-
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -41,7 +38,6 @@
     <aws.sdk.version>2.15.69</aws.sdk.version>
     <handlebars.compiler.version>4.2.0</handlebars.compiler.version>
   </properties>
-
   <repositories>
     <repository>
       <id>central</id>
@@ -64,7 +60,6 @@
       <url>https://maven.pkg.github.com/pat-lego/io.github.vm.patlego.html</url>
     </repository>
   </repositories>
-
   <distributionManagement>
     <repository>
       <id>patlego-core</id>
@@ -72,7 +67,6 @@
       <url>https://maven.pkg.github.com/pat-lego/io.github.vm.patlego</url>
     </repository>
   </distributionManagement>
-
   <build>
     <pluginManagement>
       <plugins>
@@ -114,8 +108,7 @@
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
           <version>4.3.0</version>
-          <dependencies>
-            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+          <dependencies> <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
             <dependency>
               <groupId>javax.xml.bind</groupId>
               <artifactId>jaxb-api</artifactId>
@@ -223,7 +216,6 @@
       </plugin>
     </plugins>
   </build>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -346,12 +338,6 @@
         <scope>test</scope>
       </dependency> <!--https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils-->
       <dependency>
-        <groupId>commons-dbutils</groupId>
-        <artifactId>commons-dbutils</artifactId>
-        <version>1.7</version>
-        <scope>provided</scope>
-      </dependency> <!--https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305-->
-      <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
         <version>3.0.2</version>
@@ -390,8 +376,7 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.7</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
