--- a/karaf-system/system.config/config.cfg/pom.xml
+++ b/karaf-system/system.config/config.cfg/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <artifactId>system.config</artifactId>
     <groupId>io.github.vm.patlego</groupId>
-    <artifactId>system.aws</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
   <groupId>io.github.vm.patlego</groupId>
-  <artifactId>aws.config</artifactId>
-
+  <artifactId>config.cfg</artifactId>
+ 
   <packaging>pom</packaging>
 
-  <name>System AWS Config</name>
+  <name>System Config</name>
 
   <build>
     <plugins>
@@ -51,7 +51,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>${project.build.directory}/io.github.vm.patlego.aws.s3.bucket-patlegovm.cfg</file>
+                  <file>${project.build.directory}/io.github.vm.patlego.runmodes.RunModeBean.cfg</file>
                   <type>cfg</type>
                   <classifier>default</classifier>
                 </artifact>
@@ -62,43 +62,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.core</artifactId>
-      <version>6.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.cmpn</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.annotation</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-    </dependency>
-  </dependencies>
 </project>
