--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -23,6 +23,7 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    
     <postgres.db>karaf_db</postgres.db> <!-- PSQL DEV VALUES -->
     <postgres.dev.url>jdbc:postgresql://postgres-db:5432</postgres.dev.url>
     <postgres.dev.username>karaf</postgres.dev.username>
@@ -30,7 +31,9 @@
     <postgres.ecs.url>jdbc:postgresql://pat-lego-db.ch5m6ge8f6p2.ca-central-1.rds.amazonaws.com:5432</postgres.ecs.url>
     <postgres.ecs.username>karaf</postgres.ecs.username>
     <postgres.ecs.password />
+    
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
     <karaf.runtime.version>4.3.0</karaf.runtime.version>
     <jackson.version>2.11.3</jackson.version>
     <cxf.version>3.3.3</cxf.version>
@@ -40,6 +43,11 @@
     <javax.mail.version>1.4.7</javax.mail.version>
     <aws.sdk.version>2.15.69</aws.sdk.version>
     <handlebars.compiler.version>4.2.0</handlebars.compiler.version>
+    <commons-lang3.version>3.11</commons-lang3.version>
+    <commons-io.version>2.8.0</commons-io.version>
+    <commons-text.version>1.9</commons-text.version>
+    <aries.jpa.version>2.7.2</aries.jpa.version>
+    <google-gson.version>2.8.6</google-gson.version>
   </properties>
 
   <repositories>
@@ -369,19 +377,19 @@
       <dependency>
         <groupId>org.apache.aries.jpa</groupId>
         <artifactId>org.apache.aries.jpa.api</artifactId>
-        <version>2.7.2</version>
+        <version>${aries.jpa.version}</version>
         <scope>provided</scope>
       </dependency> <!--https://mvnrepository.com/artifact/org.apache.commons/commons-lang3-->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.11</version>
+        <version>${commons-lang3.version}</version>
         <scope>provided</scope>
       </dependency> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.7</version>
+        <version>${commons-io.version}</version>
       </dependency> <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -391,7 +399,7 @@
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.6</version>
+        <version>${google-gson.version}</version>
       </dependency>
       <dependency>
         <groupId>com.amazonaws</groupId>
