--- a/karaf-system/system.workflow/workflow.dao/pom.xml
+++ b/karaf-system/system.workflow/workflow.dao/pom.xml
@@ -1,18 +1,16 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <artifactId>system.workflow</artifactId>
     <groupId>io.github.vm.patlego</groupId>
-    <artifactId>karaf-system</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>io.github.vm.patlego</groupId>
-  <artifactId>system.dao</artifactId>
-  <name>System Data Access Objects</name>
+  <artifactId>workflow.dao</artifactId>
+
+  <name>Workflow DAO</name>
   <packaging>bundle</packaging>
 
   <properties>
